# CodingWithMinmer

./: .gitignore  1249_minimum_remove_to_make_valid_parentheses.hpp  CMakeLists.txt  README.md  main  main.cpp
1004_max_consecutive_ones_3/: first_variant_1004.hpp  fourth_variant_1004_decimal_pto.hpp  original_1004.hpp  second_variant_1004.hpp  third_variant_1004_2d_matrix.hpp
1047_remove_all_adjacent_duplicates_in_string/: original_1047.hpp  variant_remove_all_1047.hpp
1091_shortest_path_in_binary_matrix/: first_variant_1091_return_shortest_path.hpp  original_1091.hpp  second_variant_1091_return_single_path.hpp
114_Flatten Binary Tree to Linked List/: orignal.py
1209_Remove All Adjacent Duplicates in String II/: 1212_variant.py  orignal.py
121_best_time_to_buy_and_sell_stock/: original_121.hpp  variant_121.hpp
1249_minimum_remove_to_make_valid_parentheses/: first_variant_in_place.hpp  first_variant_in_place_1249.hpp  first_variant_in_place_1249.py  mock_interview_1249.hpp  mock_interview_1249.py  original_1249.py  original_problem.hpp
125_valid_palindrome/: original_125.hpp  variant_125.hpp
129_sum_root_to_leaf_nodes/: first_variant_129.hpp  second_variant_129.hpp
133_clone_graph/: original_133.hpp  variant_133.hpp
138_copy_list_with_random_pointer/: original_138.hpp  variant_138.hpp
1424_diagonal_traverse_2/: first_variant_1424_anti_diagonal.hpp  original_1424.hpp  second_variant_1424_print_anti_diagonal.hpp
146_lru_cache/: original_146.hpp  variant_146.hpp
1539_kth_missing_positive_number/: original_1539.hpp  variant_1539_missing_from_leftmost_number.hpp
1570_dot_product_of_two_sparse_vectors/: original_1570.hpp  variant_binary_search_1570.hpp
162_find_peak_element/: original_162.hpp  variant_find_valley_element_162.hpp
163_missing_ranges/: original_163.hpp  variant_163.hpp
1650_lowest_common_ancestor_3/: original_1650.hpp  original_1650.py  second_variant_input_vector_1650.hpp  second_variant_input_vector_1650.py
173_Binary Search Tree Iterator/: origin.py  variant.py
1762_buildings_with_an_ocean_view/: first_variant_view_count_1762.hpp  first_variant_view_count_1762.py  original_1762.hpp  original_1762.py  second_variant.py  second_variant_ocean_view_both_sides_1762.hpp  second_variant_ocean_view_both_sides_1762.py
1891_Cutting Ribbons/: orginal.py
198_house_robber/: 198_virant.py
199_binary_tree_right_side_view/: first_variant_left_right_side_views_199.hpp  original_199.hpp  second_variant_print_left_right_side_views_199.hpp
1_two_sum/: first_variant_1.hpp  first_variant_1_return_true_or_false.hpp  original_1.hpp  second_variant_1.hpp  second_variant_1_flip_dominoes.hpp  second_variant_1_flip_dominoes.py
215_kth_largest_element/: first_variant_kth_largest_215.hpp  original_215.hpp  second_variant_kth_smallest_215.hpp
21_merge_two_sorted_lists/: first_variant_21.hpp  original_21.hpp  second_variant_21.hpp
8_atoi/: orignal.py
(+268 files in other folders)
